[gd_scene load_steps=8 format=2]

[ext_resource path="res://Project/Resources/Fonts/Epilepsy Sans/Resource/EpilepsySansOutlined.tres" type="DynamicFont" id=1]
[ext_resource path="res://Project/WorldObjects/Dialog/AppearAnimator/AppearAnimator.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Pickups/Kissie/Kissie.png" type="Texture" id=3]
[ext_resource path="res://Project/UI/Components/GameHUD/GameHUD.gd" type="Script" id=4]
[ext_resource path="res://Assets/Effects/Lighting/playerLight.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "PickupImpact"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("HeartSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 2.5, 2.5 ), Vector2( 2, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HeartSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -8.9736, -20.0, -8.9736 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HeartSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2.04107, 2.04107 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HeartSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -8.9736 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HeartSprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="GameHUD" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="KissieCounter" type="Control" parent="."]

[node name="BackgroundBlur" type="Sprite" parent="KissieCounter"]
self_modulate = Color( 0.0509804, 0.0313726, 0.223529, 0.698039 )
position = Vector2( 29, 21 )
scale = Vector2( 0.117579, 0.0744541 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="KissieCounter"]
margin_left = 28.0
margin_top = 16.0
margin_right = 49.0
margin_bottom = 29.0
custom_colors/font_color_shadow = Color( 0.65098, 0.0823529, 0.337255, 1 )
custom_fonts/font = ExtResource( 1 )
text = "100"

[node name="HeartIcon" type="Node2D" parent="KissieCounter"]
position = Vector2( 28, 15 )

[node name="HeartSprite" type="Sprite" parent="KissieCounter/HeartIcon"]
position = Vector2( -9, 8 )
rotation = -0.156619
scale = Vector2( 2.04107, 2.04107 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="KissieCounter/HeartIcon"]
anims/PickupImpact = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="AppearAnimator" parent="KissieCounter" instance=ExtResource( 2 )]
target_node_path = NodePath("..")

[node name="Timer" type="Timer" parent="KissieCounter"]
wait_time = 5.0
